--- a/index.html
+++ b/index.html
@@ -8,116 +8,43 @@
 
 <title>Curitiba</title>
 </head>
-<body>
-<header>
-<nav class="navbar navbar-default">
-  <div class="container">
-   <div class="navbar-header">
-  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-	  <a class="navbar-brand" href="#">Curitiba</a>
-	  </div>
-   <div class="collapse navbar-collapse" id="menu">
-<ul class="nav navbar-nav" >
-<li><a href="#sobre-nos">Sobre nós</a></li>
-<li><a href="#clientes">Galeria</a></li>
-</ul>
-</div>
-</div>
-</nav>
-</header>
-<section class="container">
-<div id="sobre-nos" class="container">
-<h1> Sobre nós</h1>
-<img class="img-responsive" src="img/sobreNos.jpg"/>
-<h4> Photo by Gabriel Rodrigues on Unsplash</h4>
 
-<div class="panel-group"id="painel-sobre">
-<div class="panel panel-default">
-<div class="panel-heading" data-parent="#painel-sobre" data-toggle="collapse" data-target="#p1">
-<h3 class="panel-title"  > Desde 1693</h3>
-</div>
-
-<div id="p1"class="collapse">
-<p class="panel-body" > Curitiba é a capital do Paraná, um dos três Estados que compõem a Região Sul do Brasil. Sua fundação oficial data de 29 de março de 1693 </p>
-</div>
-</div>
-
-<div class="panel panel-default">
-<div class="panel-heading" data-parent="#painel-sobre" data-toggle="collapse" data-target="#p2">
-<h3 class="panel-title" > Terra do pinhão</h3>
-</div>
-
-<div id="p2"class="collapse">
-<p  class="panel-body"> Curitiba é uma palavra de origem Guarani: kur yt yba quer dizer "grande quantidade de pinheiros, pinheiral"</p>
-</div>
-</div>
-<div class="panel panel-default">
-<div class="panel-heading" data-parent="#painel-sobre" data-toggle="collapse" data-target="#p3">
-<h3 class="panel-title"> O inverno em Curitiba</h3>
-</div>
-<div id="p3"class="collapse">
-<p class="panel-body"> A temperatura média da cidade no inverno é de 13 °C, podendo chegar a números negativos nos dias mais frios, de madrugada e de manhã. 
-Os meses de julho e agosto são os mais frios do ano, mas também os menos chuvosos. As manhãs de inverno costumam vir acompanhadas de uma neblina matinal <br>
-fonte: ricmais.com.br
-</p>
-</div>
-</div>
-</div>
-</section>
-<Section class="container">
-<h1 id="clientes" class="titulo-clientes"> Galeria</h1>
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="img/foto1.jpg" alt="...">
-      <div class="carousel-caption">
-	  <h3> Photo by Cassiano Psomas on pexels</h3>
-        ...
-      </div>
-    </div>
-    <div class="item">
-      <img src="img/foto2.jpg" alt="...">
-      <div class="carousel-caption">
-	  <h3> Photo by Koala on Unsplash</h3>
-        ...
-      </div>
-    </div>
-	<div class="item">
-      <img src="img/foto3.jpg" alt="...">
-      <div class="carousel-caption">
-	   <h3> Photo by Cassiano Psomas on Unsplash</h3>
-        ...
-      </div>
-    </div>
-    ...
+  <body>
+  <h1>Micos-leões-dourados</h1>
+  <div id="introducao">
+    <h2>Sobre os Micos-leões-dourados</h2>
+    <p> O mico-leão-dourado (<em>Leontopithecus rosalia</em>) é uma espécie de primata endêmica da Mata Atlântica no Brasil. Atualmente, seu status de conservação é <strong>Ameaçado</strong>, com esforços de preservação contínuos para evitar sua extinção.<br><br>
+Existem outras espécies de micos-leões, como o mico-leão-de-cara-preta (Leontopithecus caissara) e o mico-leão-preto (Leontopithecus chrysopygus), mas o mico-leão-dourado é o mais conhecido devido à sua coloração vibrante e projetos de conservação.</p>
+    <h3>Especies</h3>
+    <ul>
+      <li>Leontopithecus caissara (mico-leão-de-cara-preta)</li>
+      <li>Leontopithecus chrysopygus (mico-leão-preto)</li>
+      <li>Leontopithecus chrysomelas (mico-leão-de-cara-dourada)</li>
+    </ul>
+    <h3>Caracteristicas</h3>
+    <p>Os micos-leões-dourados têm uma pelagem dourada brilhante que cobre quase todo o corpo, com exceção do rosto. São pequenos, com um comprimento médio de 26 a 33 cm (excluindo a cauda) e pesam cerca de 500 a 700 gramas. Eles possuem garras longas que ajudam a escalar árvores e buscar insetos, além de dentes adaptados para comer frutas.</p>
   </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-<script src="jquery.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-	
+  <div id="habitat">
+    <h2>Habitat</h2>
+<p>Os micos-leões-dourados são encontrados exclusivamente na Mata Atlântica do Brasil, especialmente em áreas protegidas no estado do Rio de Janeiro, como a Reserva Biológica de Poço das Antas e o Parque Estadual dos Três Picos.</p>
+    <h3> Áreas de maior ocorrência de micos-leões-dourados</h3>
+    <ol>
+      <li>Reserva Biológica de Poço das Antas</li>
+      <li>Área de Proteção Ambiental de São João</li>
+      
+    </ol>
+    <h3> Áreas de menor ocorrência devido à degradação do habitat</h3>
+<p>Regiões fragmentadas da Mata Atlântica no sudeste do Brasil
+</p>
+  </div>
+  <div id="media">
+    <h2>Media</h2>
+    <img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" alt="A Brown Bear"/>
+    <video src="https://github.com/Lukhya/aula/blob/main/html/midia/monkey-in-zoo.mp4" width="560" height="315" controls> Video not supported</video>
+    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/RxRdPGNgrhs?si=1GdnG4XI_H7VIrpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
 </body>
+
+
 </html>
