--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@ Existem outras espécies de micos-leões, como o mico-leão-de-cara-preta (Leont
   <div id="media">
     <h2>Media</h2>
     <img src="./html/midia/mico.png"  width="560" height="315" alt="mico leao"/>
-    <video src="./html/midia/monkey-in-zoo.mp4" width="560" height="315" controls> Video not supported</video>
+    <video  width="560" height="315" controls> 
+      
+      <source src="./html/midia/monkey-in-zoo.mp4" type="video/mp4">
+      Video not supported</video>
     
     <iframe width="560" height="315" src="https://www.youtube.com/embed/RxRdPGNgrhs?si=1GdnG4XI_H7VIrpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
